Fixed overlapping issue with navbar and form builder

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.col-sm-10, .col-sm-12 {
+.col-sm-10, .col-sm-12, .col-sm-8 {
     margin-left: 0 auto;
     margin-right: 0 auto;
     display: inline-block;
@@ -12,6 +12,26 @@
 
 #login {
     
+}
+* li {
+    list-style: none;
+}
+.notification-1 {
+    max-width: 30%;
+    min-width: 30%;
+    display: inline-block;
+    float: left;
+}
+
+.notification-2 {
+    max-width: 30%;
+    min-width: 30%;
+    display: inline-block;
+    float: right;
+}
+
+.notification-1 li, .notification-2 li {
+    list-style: none;
 }
 
 #buttons li a{
